[gd_scene load_steps=20 format=3 uid="uid://dbcg6xu5cb3ls"]

[ext_resource type="Script" path="res://GameScene.gd" id="1_n8w3f"]
[ext_resource type="Script" path="res://MenuEarth.gd" id="2_b5swv"]
[ext_resource type="PackedScene" uid="uid://d5uc0dug7pw6" path="res://Enemies.tscn" id="2_w624q"]
[ext_resource type="Texture2D" uid="uid://dwmoqt7qi1g" path="res://ufoGreen.png" id="3_drvap"]
[ext_resource type="Script" path="res://Barrier.gd" id="3_qx2c8"]
[ext_resource type="Script" path="res://Star.gd" id="6_1yhsf"]
[ext_resource type="AudioStream" uid="uid://cir01x8dpx2mx" path="res://explosionsnd1.wav" id="7_8ywxw"]
[ext_resource type="AudioStream" uid="uid://ighrg7cso4ed" path="res://explosionsnd2.wav" id="8_nd3po"]
[ext_resource type="AudioStream" uid="uid://dobmyn5rt8iyh" path="res://explosionsnd3.wav" id="9_uklou"]
[ext_resource type="Texture2D" uid="uid://d1m7n1mxrdriw" path="res://Explosion.png" id="10_p4bds"]
[ext_resource type="AudioStream" uid="uid://b70vjg83883m5" path="res://Among_Us_Menu_Music-639824.wav" id="10_vhc03"]
[ext_resource type="Script" path="res://Explosion.gd" id="11_413bq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h7has"]
size = Vector2(91, 92)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5p68b"]
size = Vector2(72, 12)

[sub_resource type="Curve2D" id="Curve2D_vfvd0"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -577, -322, 0, 0, 0, 0, 576, -325, 0, 0, 0, 0, 576, 322, 0, 0, 0, 0, -578, 323, 0, 0, 0, 0, -580, -320)
}
point_count = 5

[sub_resource type="LabelSettings" id="LabelSettings_dppm2"]
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_bqr78"]
font_size = 64

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1vyi4"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_iqd3f"]
streams_count = 3
stream_0/stream = ExtResource("7_8ywxw")
stream_0/weight = 1.0
stream_1/stream = ExtResource("8_nd3po")
stream_1/weight = 1.0
stream_2/stream = ExtResource("9_uklou")
stream_2/weight = 1.0

[node name="GameScene" type="Node2D"]
script = ExtResource("1_n8w3f")
Enemies = ExtResource("2_w624q")

[node name="View" type="Camera2D" parent="."]

[node name="Background" type="ColorRect" parent="."]
modulate = Color(0, 0, 0, 1)
show_behind_parent = true
z_index = -2
offset_left = -577.0
offset_top = -324.0
offset_right = 575.0
offset_bottom = 322.0

[node name="Earth" type="Area2D" parent="."]

[node name="Earth" type="Sprite2D" parent="Earth"]
texture = ExtResource("3_drvap")
script = ExtResource("2_b5swv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Earth"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_h7has")

[node name="Barrier" type="Area2D" parent="."]
script = ExtResource("3_qx2c8")

[node name="ColorRect" type="ColorRect" parent="Barrier"]
offset_left = -36.0
offset_top = -103.0
offset_right = 36.0
offset_bottom = -91.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barrier"]
position = Vector2(0, -97)
shape = SubResource("RectangleShape2D_5p68b")

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_vfvd0")

[node name="PathFollow2D" type="PathFollow2D" parent="EnemyPath"]
position = Vector2(-577, -322)
rotation = -0.0026019

[node name="Timer" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[node name="PointsTag" type="Label" parent="."]
offset_left = -564.0
offset_top = -325.0
offset_right = -353.0
offset_bottom = -237.0
text = "Points:"
label_settings = SubResource("LabelSettings_dppm2")

[node name="Points" type="Label" parent="PointsTag"]
layout_mode = 0
offset_left = 230.0
offset_top = 0.1
offset_right = 270.0
offset_bottom = 88.1
text = "0"
label_settings = SubResource("LabelSettings_bqr78")

[node name="HighScore" type="Label" parent="."]
offset_left = -564.0
offset_top = -255.0
offset_right = -353.0
offset_bottom = -167.0
text = "HighScore:"
label_settings = SubResource("LabelSettings_dppm2")

[node name="Score" type="Label" parent="HighScore"]
layout_mode = 0
offset_left = 346.0
offset_top = 0.1
offset_right = 386.0
offset_bottom = 88.1
text = "0"
label_settings = SubResource("LabelSettings_bqr78")

[node name="StarTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Star" type="Area2D" parent="."]
z_index = -1
position = Vector2(-618, -324)
rotation = 3.14159
scale = Vector2(0.177466, -0.313815)
script = ExtResource("6_1yhsf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Star"]
shape = SubResource("RectangleShape2D_1vyi4")
disabled = true

[node name="ColorRect" type="ColorRect" parent="Star"]
offset_left = -10.0
offset_top = -10.0
offset_right = 30.0
offset_bottom = 30.0
scale = Vector2(0.496855, 0.496875)

[node name="PointGain" type="AudioStreamPlayer2D" parent="."]

[node name="MeteorCollide" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_iqd3f")

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_vhc03")
autoplay = true

[node name="Explosion" type="Sprite2D" parent="."]
position = Vector2(-713, -282)
scale = Vector2(0.08, 0.08)
texture = ExtResource("10_p4bds")
script = ExtResource("11_413bq")

[connection signal="EnemySpawned" from="." to="Barrier" method="_on_game_scene_enemy_spawned"]
[connection signal="timeout" from="StarTimer" to="." method="_on_star_timer_timeout"]
